--- a/book.org
+++ b/book.org
@@ -135,4 +135,28 @@
         + 马太效应：*你有，给你更多；你没有，把你原来的都拿走*
         + 当人一旦从危险里跳出来，他就不再去关注这个事物的危险了，他的目光就会全部落在这个事物的利益人上，这就是人。
 ***** 21. 中的精神 
+        + 棋无止境，艺无止境，学无止境，各行各业追求的精神都是相通的，达到这样一个境界的人，专注修为，一定会有所成就。
+        + 对于自传或回忆录的作者来说，首先必须面对的，是诗与真的旋蒸，自我与世界的互动，还有遗忘与创造之间的平衡。
+        + 反复争棋的最后目的，是从中领悟建立圆满调和的道。
+        + 人的思想有三种变形，由忍辱负重的骆驼，到英勇搏击的雄狮，再到天真游戏的儿童。
+        + 小时候的教育如同一颗智慧的种子，深埋在吴老师心灵的土壤里，经过这么多年的灌溉培育，那一粒种子已悄然地长成一棵枝叶茂盛的大树。
+        + 中和了棋盘上各个子的作用的那一点，就是正着。
+        + 无论输赢，只要下出了最善的一手，那就是成功的一局。
+        + *《三字经》* 写的是人间的根本。《大学》讲的是政治的根本。
+        + 围棋不会出现两局完全相同的形状，所以每盘棋都应该重视，认真下。
+        + 任何事物都是自然的。
+        + 每逢遇到问题，他会从很多方面去研究，直至自己能够理解，弄清楚其中的道理为止。
+        + 比起木谷先生培养了众多的后辈棋手来，我更想把围棋推向世界。(从这个里面可以看出，为什么日本最后 *六超* 之后，再也没有达到过世界前沿。)
+        + *21世纪的围棋,* 简而言之就是“从棋盘的整体去考虑”。围棋一般分序盘、中盘、官子几个阶段来进行思考的，但我想，应该是从整体上去思考。(按整体去思考，我余下的人生应该怎样度过？)
+        + 所谓最佳一手，指的是棋子下在某个位置上，之后棋力相等的棋手无论怎样去继续，那手棋始终处于有利于全局的位置。２１世纪的围棋也要继续变化下去。
+        + 一阳來夏，复旦天心。
+        + 像季节轮回那样，世界也是盛衰轮回，一旦衰之极也会复苏过来，这是自然的形态。
+        + 围棋的目标不是局限于边角，而是应该很好地保持全体的平衡，站在一个很高的角度去看待。（所以，学习python, lisp, emacs, vim, php源码, 读书，下棋，游泳，爬山，旅游并不是浪费时间。而是站在一个相对平衡的角度思考人生，实践求证 ）
+        + 棋盘即是宇宙。
+        + 阴阳思想的最高境界是阴和阳的中和，所以围棋的目标也应该是中和。只有发挥出棋盘上所有棋子的效率那一手才是最佳的一手，那就是中和的意思。每一手必须是考虑全盘整体的平衡去下。－－这就是 *六合围棋*
+        + 所有有形的东西都是变化的。
+        + 创造围棋进步的是安定的精神动力。
+        + *中* 是取得阴阳平衡的一点，是最佳的意思。
+        + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
+
 ***** 22. 官子大全 
