--- a/book.org
+++ b/book.org
@@ -147,7 +147,7 @@
         + 任何事物都是自然的。
         + 每逢遇到问题，他会从很多方面去研究，直至自己能够理解，弄清楚其中的道理为止。
         + 比起木谷先生培养了众多的后辈棋手来，我更想把围棋推向世界。(从这个里面可以看出，为什么日本最后 *六超* 之后，再也没有达到过世界前沿。)
-        + *21世纪的围棋,* 简而言之就是“从棋盘的整体去考虑”。围棋一般分序盘、中盘、官子几个阶段来进行思考的，但我想，应该是从整体上去思考。(按整体去思考，我余下的人生应该怎样度过？)
+        + *21世纪的围棋* , 简而言之就是“ *从棋盘的整体去考虑* ”。围棋一般分序盘、中盘、官子几个阶段来进行思考的，但我想，应该是从整体上去思考。(按整体去思考，我余下的人生应该怎样度过？)
         + 所谓最佳一手，指的是棋子下在某个位置上，之后棋力相等的棋手无论怎样去继续，那手棋始终处于有利于全局的位置。２１世纪的围棋也要继续变化下去。
         + 一阳來夏，复旦天心。
         + 像季节轮回那样，世界也是盛衰轮回，一旦衰之极也会复苏过来，这是自然的形态。
