--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,20 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 ** 一年之内，学成emacs这套刀法
+*** 2016-09-13 
+***** 闲来 ubuntu 下升vim 至*vim8.0*
++ git clone https://github.com/vim/vim.git
++ 查看readme.md 知道install 相关在src目录下INSTALL有说明
++ =make=
++ =make install=
++ =vim ~/.zshrc=
++ 添加  *alias vim='/usr/local/bin/vim'*
++ =source ~/.zshrc=
++ 收工,重启
++ vim --serion 
+ ➜  StudyNotes git:(master) ✗ vim --version
+vim --version
+VIM - Vi IMproved 8.0 (2016 Sep 12, compiled Sep 13 2016 10:14:12)
+Included patches: 1-3
 *** 2016-09-10 
 + 先定一个小目标,比如看一遍<深入理解php内核>，先屠他一条大龙。哦，已经两个小目标了。。。。。。
 *** 2016-09-09 
