* 修改语句通畅点

--- a/readme.org
+++ b/readme.org
@@ -13,11 +13,11 @@
 + 收工, 查看vim 版本已经使用升级的版本
 + =vim --serion= 
   VIM - Vi IMproved 8.0 (2016 Sep 12, compiled Sep 13 2016 10:14:12) Included patches: 1-3
-+ 有些gif图画弄一下会形成比较直观的说明，需要自己制作一些gif图片
-    - sudo apt install ffmpeg imagemagick
-    - =ffmpeg -h= 查看帮助文档，知道可以截取并压缩video视频，=convert -h= 调出帮助命令，发现可以利用多个文件生成一个gif, 做两个test
-    - ffmpeg -ss 00:03:50 -i Vim-2-iTerm-Vimrc-and-Syntax-Highlighting.mp4  -to 00:04:00  vim.gif, [[./photos/vim.gif][果然]]
-    - convert -delay 300 -loop 0 *.jpg test.gif
++ 有些 gif 图会比文字更好说服力，也更形象具体，为方便自己的文档说明，需要自己制作一些gif图片, 那么开搞吧。
+    - =sudo apt install ffmpeg imagemagick=
+    - =ffmpeg -h= 查看帮助文档，知道可以截取并压缩video视频, =convert -h= 调出帮助命令，发现可以利用多个文件生成一个gif, 做两个test
+    - =ffmpeg -ss 00:03:50 -i Vim-2-iTerm-Vimrc-and-Syntax-Highlighting.mp4  -to 00:04:00  vim.gif=  [[./photos/vim.gif][果然]]
+    - =convert -delay 300 -loop 0 *.jpg test.gif=
 *** 2016-09-10 
 + 先定一个小目标,比如看一遍<深入理解php内核>，先屠他一条大龙。哦，已经两个小目标了。。。。。。
 *** 2016-09-09 
