--- a/php/readme.org
+++ b/php/readme.org
@@ -2,13 +2,13 @@
 ***** 动手前
 + 使用一个东西，不对它有比较深刻的了解，用的不安心。这个说不定和公司用人一样，对应聘者的履历、背景和人品都会做一番功课。所以就有了这一段笔记。
 ***** 源码目录架构
-+ */* 根目录里面有多个文件。有说明的，有启动测试的，logo等等
-+ *build* 里面放置的都是一些源码编译的文件
-+ *ext* 官方扩展目录，包括了绝大多数PHP的函数的定义和实现，如array系列，pdo系列，spl系列等函数的实现，都在这个目录中。
-+ *main* php核心文件
-+ *Zend* Zend引擎文件都在里面，包括词法分析，语法分析，opcode执行和扩展。
-+ *pear* “PHP 扩展与应用仓库”，包含PEAR的核心文件。
-+ *sapi* 包含了各种服务器抽象层的代码, cli, fpm等。
-+ *TSRM* TSRM(是Thread Safe Resource Manager的缩写)即线程安全资源管理器。
-+ *tests* PHP这货自己用php测试自己
-+ *win32* windows平台的兼容实现
++ */* ：根目录里面有多个文件。有说明的，有启动测试的，logo等等
++ *build*： 里面放置的都是一些源码编译的文件
++ *ext* ：官方扩展目录，包括了绝大多数PHP的函数的定义和实现，如array系列，pdo系列，spl系列等函数的实现，都在这个目录中。
++ *main* ：php核心文件
++ *Zend* ：Zend引擎文件都在里面，包括词法分析，语法分析，opcode执行和扩展。
++ *pear* ：“PHP 扩展与应用仓库”，包含PEAR的核心文件。
++ *sapi* ：包含了各种服务器抽象层的代码, cli, fpm等。
++ *TSRM* ：TSRM(是Thread Safe Resource Manager的缩写)即线程安全资源管理器。
++ *tests* ：PHP这货自己用php测试自己
++ *win32* ：windows平台的兼容实现
