--- a/php/readme.org
+++ b/php/readme.org
@@ -12,3 +12,7 @@
 + *TSRM* ：TSRM(是Thread Safe Resource Manager的缩写)即线程安全资源管理器。
 + *tests* ：PHP这货自己用php测试自己
 + *win32* ：windows平台的兼容实现
+***** c底层说明
++ 在C语言的宏中，"##"被称为 连接符（concatenator），它是一种预处理运算符， 用来把两个语言符号(Token)组合成单个语言符号。
++ "#"是一种预处理运算符，它的功能是将其后面的宏参数进行字符串化操作 ， 简单说就是在对它所引用的宏变量通过替换后在其左右各加上一个双引号， 官方的说是将语言符号(Token)转化为字符串。
++ #line预处理用于改变当前的行号（__LINE__）和文件名（__FILE__）。
