--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 ** 一年之内，学成emacs这套刀法
+*** 聊发少年狂
++ 射雕侠侣里面有一段有关学习的方法论。是金轮法王对还没有遇上神雕时的杨过说的, 当时杨过还没有接触到独孤求败的东西。大意是你跟着别人学了各种各样的武功，但是你没有一种武功是你自己的, 而且对而不精，杂而不纯。别看金轮整天转着个大锅盖到处瞎逛，人家还是有些独到的见解的。特别从当时的杨过的武功学习的状态来看，这见解就是一针见血!　现在学的c和PHP内核源码虽然是更接近源头一点了，但还是有些摸不着头脑。还是摸索的状态。
 *** ubuntu下自己录制视频　
 + 安装karam
 + 启动karam
