--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,5 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
-** 一年之内，学成emacs这套刀法
+** emacs
 *** 聊发少年狂
 + 射雕侠侣里面有一段有关学习的方法论。是金轮法王对还没有遇上神雕时的杨过说的, 当时杨过还没有接触到独孤求败的东西。大意是你跟着别人学了各种各样的武功，但是没有一种武功是你自己的, 而且多而不精，杂而不纯。别看金轮整天转着个"大(金)锅(轮)盖"到处瞎逛，可人家还是有些独到的见解的。从当时杨过的武功学习的状态来看，这见解就是一针见血! 现在学的c和PHP内核源码虽然是更接近源头一点了，但还是很多摸不着头脑的地方。还是苦苦摸索点点滴滴的状态。下棋和coding都是修行。
 *** ubuntu下自己录制视频　
