--- a/readme.org
+++ b/readme.org
@@ -2,8 +2,8 @@
 ** emacs
 *** 阿里事件对我的冲击
 + 这个中秋，我过得很安静。没有吃月饼。不是我不想吃，也不是我想吃，买不到，更不是阿里“月饼”事件让我没有买月饼的冲动。而是我不care月饼。我假设我是阿里这次事件中的一员技术人员，我会怎么做？是否会像胡敏一样, 或者另外四位安全技术中的一位的做法?一个小小的月饼，为什么就引发了短短的两个小时就开掉四个安全技术？这是个什么性质事件？开发有责任?hr为什么投石击水泛起社会如此大的权利波浪？阿里“月饼”不管味道怎么样, 今年对于阿里来说都是变味的，而对于我来说，是变化的。
-+ 此刻我脑子里面浮现出的是《遥远的救世主》里的一段话: [[透视社会依次有三个层次 *技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移* 。][./book.org]]从这个层面去理解，就不足为奇了。因为，技术人员的去留就是他们自己的文化属性的产物。当阿里的制度成为公司的优势文化。上层管理者关心的不仅仅是利润，或者安全，他们更关心的是对大众平民的"公平" 。一个"平"字，弱已经在其中了。在"公平"作为强势文化的公司，技术相对于制度，就没有了优势。技术漏洞并非这次事件的主要矛盾, 因为从事件的处理方式上面看，处理焦点是“脚本者”, 而不是开发者。
-+ 从阿里的发展可以知道，前期以开拓市场为主导抢占客户资源，之后逐渐过渡到完善服务来稳定资源。两者都是抵御市场风险的强力手段。但现在阿里的市场蛋糕已经足够大了, 也可以理解为，开拓市场做足做够了，完善服务还不够。这说明阿里不缺少几个终将退出的coders, developers,还缺少的是"夯实基础 砥砺前行"的制度服务。
+ 此刻我脑子里面浮现出的是《遥远的救世主》里的一段话: [[透视社会依次有三个层次 技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移 。][./book.org]]从这个层面去理解，就不足为奇了。因为，技术人员的去留就是他们自己的文化属性的产物。当阿里的制度成为公司的优势文化。上层管理者关心的不仅仅是利润，或者安全，他们更关心的是对大众平民的"公平" 。一个"平"字，弱已经在其中了。在"公平"作为强势文化的公司，技术相对于制度，就没有了优势。技术漏洞并非这次事件的主要矛盾, 因为从事件的处理方式上面看，处理焦点是“脚本者”, 而不是开发者。
+ 从阿里的发展可以知道，前期以开拓市场为主导抢占客户资源，之后逐渐过渡到完善服务来稳定资源。两者都是抵御市场风险的强力手段。但现在阿里的市场蛋糕已经足够大了, 也可以理解为，开拓市场做足做够了，完善服务还不够。这说明阿里不缺少几个终将退出的coders, developers,还缺少的是"夯实基础 砥砺前行"的制度服务。
 
 　　　／　＼
 
@@ -30,8 +30,7 @@
 　　　　　　／　　｜：＜＿Ｔ＿＞：｜
 
 　　　　＂＂．．．．＂，
-+ 从今以后，可以知道，无论手握哪一种语言，哪一门技术，在阿里，coders充其量只是和平时期的军队，对某些技术来说是没有什么前途的。这会引发什么？可以预见的是，不远的将来，阿里无论采取什么手段挽留技术人员，都不可避免的将流失一部分重量级的技术。为什么，因为这已经违背了技术的文化属性。技术的文化属性里面，技术自由是他们的至高追求。当技术人员不缺少生存的需求，他们所追求的是更高的人生价值考量。
-
+ 从今以后，可以知道，无论手握哪一种语言，哪一门技术，在阿里，coders充其量只是和平时期的军队，对某些技术来说是没有什么前途的。这会引发什么？可以预见的是，不远的将来，阿里无论采取什么手段挽留技术人员，都不可避免的将流失一部分重量级的技术。为什么，因为这已经违背了技术的文化属性。技术的文化属性里面，技术自由是他们的至高追求。当技术人员不缺少生存的需求，他们所追求的是更高的人生价值考量。
 *** 聊发少年狂 + 射雕侠侣里面有一段有关学习的方法论。是金轮法王对还没有遇上神雕时的杨过说的, 当时杨过还没有接触到独孤求败的东西。大意是你跟着别人学了各种各样的武功，但是没有一种武功是你自己的, 而且多而不精，杂而不纯。别看金轮整天转着个"大(金)锅(轮)盖"到处瞎逛，可人家还是有些独到的见解的。从当时杨过的武功学习的状态来看，这见解就是一针见血! 现在学的c和PHP内核源码虽然是更接近源头一点了，但还是很多摸不着头脑的地方。还是苦苦摸索点点滴滴的状态。下棋和coding都是修行。
 *** ubuntu下自己录制视频　
 + 安装karam
