--- a/readme.org
+++ b/readme.org
@@ -29,8 +29,8 @@
 
 　　　　　　／　　｜：＜＿Ｔ＿＞：｜
 
-　　　　＂＂．．．．＂，
- 从今以后，可以知道，无论手握哪一种语言，哪一门技术，在阿里，coders充其量只是和平时期的军队，对某些技术来说是没有什么前途的。这会引发什么？可以预见的是，不远的将来，阿里无论采取什么手段挽留技术人员，都不可避免的将流失一部分重量级的技术。为什么，因为这已经违背了技术的文化属性。技术的文化属性里面，技术自由是他们的至高追求。当技术人员不缺少生存的需求，他们所追求的是更高的人生价值考量。
+ 从今以后，可以知道，无论手握哪一种语言，哪一门技术，在阿里，coders充其量只是和平时期的军队，对某些技术个人来说已经什么前途。这会引发什么？已经发生, 就不用说了。可以预见的是，不远的将来，阿里无论采取什么手段挽留技术人员，都不可避免的将流失一部分重量级的技术。为什么，因为这已经违背了技术的文化属性。技术的文化属性里面，技术自由是他们的至高追求。当技术人员不缺少生存的需求，他们所追求的是更高的人生价值考量。某些公司可以开始准备好措辞，引进自己需要的人才了。
+而作为一名技术来说，技术自由并不等同于权利自由。你手里有个锤，不要见个东西就上去当成钉子随便敲几下。 *不该作为的不作为就是作为* 。因为技术手段使用不当而坐牢的，大有人在。同样的，在国家法律面前，只要你触动了某些线条，一样够你喝一壶的了。在一个大环境里面，首先需要知道它的文化属性是什么，然后结合自己的文化属性，做出最好的结合。而不是制造矛盾。如果这个环境的文化属性压制你的文化属性，那么要么你换个环境，或者改变自己。
 *** 聊发少年狂 
 + 射雕侠侣里面有一段有关学习的方法论。是金轮法王对还没有遇上神雕时的杨过说的, 当时杨过还没有接触到独孤求败的东西。大意是你跟着别人学了各种各样的武功，但是没有一种武功是你自己的, 而且多而不精，杂而不纯。别看金轮整天转着个"大(金)锅(轮)盖"到处瞎逛，可人家还是有些独到的见解的。从当时杨过的武功学习的状态来看，这见解就是一针见血! 现在学的c和PHP内核源码虽然是更接近源头一点了，但还是很多摸不着头脑的地方。还是苦苦摸索点点滴滴的状态。下棋和coding都是修行。
 *** ubuntu下自己录制视频　
