--- a/readme.org
+++ b/readme.org
@@ -28,7 +28,7 @@
 　　　　　　｜＿＿＿｜：：ｏＯｏ：：｜
 
 　　　　　　／　　｜：＜＿Ｔ＿＞：｜
-  - 而作为一名技术来说，技术自由并不等同于权利自由。智者对于愚者确是一种资源，只是使用这种资源时，需要衡量在当下的环境里使用会引发什么?毕竟不同公司有着截然不同的文化。手里有个锤，不要见个东西就上去当成钉子随便敲几下。 *不该作为的不作为就是作为* 。因为技术手段使用不当而坐牢的，大有人在。同样的，在国家法律面前，只要你触动了某些线条，一样够你喝一壶的了。在一个大环境里面，首先需要知道它的文化属性是什么，然后结合自己的文化属性，做出最好的结合。而不是制造矛盾。如果这个环境的文化属性压制你的文化属性，那么要么你换个环境，或者改变自己。
+  - 而作为一名技术来说，技术自由并不等同于权利自由。智者对于愚者确是一种资源，但这是一种有限的资源。你比如这次脚本刷的时候，如果你设置的是循环一次呢？从数量上是不会引发过度月饼资源开采的（即便从性质上说并没有什么区别）。使用这种资源时，需要衡量在当下的环境里使用会引发什么?毕竟不同公司有着截然不同的文化。手里有个锤，不要见个东西就上去当成钉子随便敲几下。 *不该作为的不作为就是作为* 。因为技术手段使用不当而坐牢的，大有人在。同样的，在国家法律面前，只要你触动了某些线条，一样够你喝一壶的了。在一个大环境里面，首先需要知道它的文化属性是什么，然后结合自己的文化属性，做出最好的结合。而不是制造矛盾。如果这个环境的文化属性压制你的文化属性，那么要么你换个环境，或者改变自己。
   - 从今以后，可以知道，无论手握哪一种语言，哪一门技术，在阿里，coders充其量只是和平时期的军队，对某些技术个人来说已经什么前途。这会引发什么？已经发生, 就不用说了。可以预见的是，不远的将来，阿里无论采取什么手段挽留技术人员，都不可避免的将流失一部分重量级的技术。为什么，因为这已经违背了技术的文化属性。技术的文化属性里面，技术自由是他们的至高追求。当技术人员不缺少生存的需求，他们所追求的是更高的人生价值考量。某些公司可以开始准备好措辞，引进自己需要的人才了。
   - 对于我而言，这次事件给我的冲击是: 我的命运不该被掌握在他人的手里。所以我应该加快速度研发自己的东西，而不只是公司交给我的任务。这件事请，最大的赢家是其它的公司。
 *** 聊发少年狂 
