--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 ** emacs
+*** 升级 pip 
+ + =pip install -U pip=
 *** 阿里事件对我的冲击
 + 这个中秋，我过得很安静。没有吃月饼。不是我不想吃，也不是我想吃，买不到，更不是阿里“月饼”事件让我没有买月饼的冲动。而是我不care月饼。我假设我是阿里这次事件中的一员技术人员，我会怎么做？是否会像胡敏一样, 或者另外四位安全技术中的一位的做法?一个小小的月饼，为什么就引发了短短的两个小时就开掉四个安全技术？这是个什么性质事件？开发有责任?hr为什么投石击水泛起社会如此大的权利波浪？阿里“月饼”不管味道怎么样, 今年对于阿里来说都是变味的，而对于我来说，是变化的。
   - 此刻我脑子里面浮现出的是《遥远的救世主》里的一段话: [[./book.org][透视社会依次有三个层次 技术，制度和文化。小到一个人，大到一个国家一个民族，任何一种命运归根到底都是那种文化属性的产物。强势文化造就强者，弱势文化造就弱者，这就是规律，也可以理解为天道，不以人的意志为转移 。]]从这个层面去理解，就不足为奇了。因为，技术人员的去留就是他们自己的文化属性的产物。当阿里的制度成为公司的优势文化。上层管理者关心的不仅仅是利润，或者安全，他们更关心的是对大众平民的"公平" 。一个"平"字，弱已经在其中了。在"公平"作为强势文化的公司，技术相对于制度，就没有了优势。技术漏洞并非这次事件的主要矛盾, 因为从事件的处理方式上面看，处理焦点是“脚本者”, 而不是开发者。
