--- a/decryption.org
+++ b/decryption.org
@@ -3,3 +3,94 @@
 *** 一个加密邮箱地址  
 XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+解法： 一个加密邮箱地址
+加密后 前   ASICC
+XDY1 
+XDc2 
+XDY5 
+XDZj 
+XDYz 
+XDZm   o    
+XDcz 
+XDQw   @
+XDY3 
+XDZk   m
+XDYx 
+XDY5 
+XDZj 
+XDJl   .
+XDYz   c
+XDZm   o
+XDZk   m
+
+分析思路： 
+(1) 常规邮箱一定含有 @ 和 . 这个字符
+(2) 最后都是统一由字母输出， 那么说明这个加密邮箱地址是从单个asicc码加密而成。
+
+(3) 加密后的规律: 
+    a. 没四个字母代表了一个符号，字母或者数字
+    b. XD 是共有的
+    c. 组成有大、小写字母和数字
+(4) 什么东西可以加密成大、小写字母和数字？ 或者说大、小写字母和数字可以代表什么？
+
