--- a/decryption.org
+++ b/decryption.org
@@ -69,29 +69,29 @@ XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 | 加密后 | chr | Oct | Hx | Dec |
 | XDY1   |     |     |    |     |
 | XDc2   |     |     |    |     |
-| XDY5   | i   |     |    |     |
-| XDZj   | l   |     |    |     |
-| XDYz   | c   |     |    |     |
-| XDZm   | o   |     |    |     |
+| XDY5   | i   | 151 | 69 | 105 |
+| XDZj   | l   | 154 | 6C | 108 |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 157 | 6F | 111 |
 | XDcz   |     |     |    |     |
-| XDQw   | @   |     |    |  64 |
-| XDY3   | g   |     |    |     |
-| XDZk   | m   |     |    |     |
-| XDYx   | a   |     |    |     |
-| XDY5   | i   |     |    |     |
-| XDZj   | l   |     |    |     |
-| XDJl   | .   |     |    |  46 |
-| XDYz   | c   |     |    |  99 |
-| XDZm   | o   |     |    | 111 |
-| XDZk   | m   |     |    | 109 |
+| XDQw   | @   | 100 | 40 |  64 |
+| XDY3   | g   | 147 | 67 | 103 |
+| XDZk   | m   | 155 | 6D | 109 |
+| XDYx   | a   | 141 | 61 |  97 |
+| XDY5   | i   | 151 | 69 | 105 |
+| XDZj   | l   | 154 | 6C | 108 |
+| XDJl   | .   | 056 | 2E |  46 |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 156 | 6F | 111 |
+| XDZk   | m   | 155 | 6D | 109 |
 
 *** 分析思路： 
-+ 常规邮箱一定含有 @ 和 . 这个字符
-+ 最后都是统一由字母输出， 那么说明这个加密邮箱地址是从单个asicc码加密而成。
-
++ 常规邮箱一定含有 @ 和 . 这两个字符, 可包含数字, 字母或者数字
++ 最后都是统一由字母输出， 那么说明这个加密邮箱地址都是从可以由单个asicc码加密而成。
 + 加密后的规律: 
-    a. 没四个字母代表了一个符号，字母或者数字
+    a. 每四个字母代表了一个符号, 字母或者数字
     b. XD 是共有的
-    c. 组成有大、小写字母和数字
-+ 什么东西可以加密成大、小写字母和数字？ 或者说大、小写字母和数字可以代表什么？
+    c. 加密后组成有大、小写字母和数字
++ 什么东西可以加密成大、小写字母和数字? 或者说大, 小写字母和数字可以代表什么?
++ 
 
