--- a/decryption.org
+++ b/decryption.org
@@ -3,69 +3,37 @@
 *** 一个加密邮箱地址  
 XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ** 解法：
 *** 一个加密邮箱地址
+| 加密后 | chr | Oct | Hx | Dec |
+| XDY1   |     |     |    |     |
+| XDc2   |     |     |    |     |
+| XDY5   |     |     |    |     |
+| XDZj   |     |     |    |     |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 157 | 6F | 111 |
+| XDcz   |     |     |    |     |
+| XDQw   |     |     |    |     |
+| XDY3   |     |     |    |     |
+| XDZk   |     |     |    |     |
+| XDYx   |     |     |    |     |
+| XDY5   |     |     |    |     |
+| XDZj   |     |     |    |     |
+| XDJl   | .   | 056 | 2E |  46 |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 156 | 6F | 111 |
+| XDZk   | m   | 155 | 6D | 109 |
+
+*** 分析思路： 
++ 常规邮箱一定含有 @ 和 . 这两个字符, 可包含数字, 字母或者数字
++ 最后都是统一由字母输出， 那么说明这个加密邮箱地址都是从可以由单个asicc码加密而成。
++ 加密后的规律: 
+    a. 每四个字母代表了一个符号, 字母或者数字
+    b. XD 是共有的
+    c. 加密后组成有大、小写字母和数字
++ 什么东西可以加密成大、小写字母和数字? 或者说大, 小写字母和数字可以代表什么?
+
+
 | 加密后 | chr | Oct | Hx | Dec |
 | XDY1   |     |     |    |     |
 | XDc2   |     |     |    |     |
@@ -82,16 +50,8 @@ XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 | XDZj   | l   | 154 | 6C | 108 |
 | XDJl   | .   | 056 | 2E |  46 |
 | XDYz   | c   | 143 | 63 |  99 |
-| XDZm   | o   | 156 | 6F | 111 |
+| XDZm   | o   | 157 | 6F | 111 |
 | XDZk   | m   | 155 | 6D | 109 |
 
-*** 分析思路： 
-+ 常规邮箱一定含有 @ 和 . 这两个字符, 可包含数字, 字母或者数字
-+ 最后都是统一由字母输出， 那么说明这个加密邮箱地址都是从可以由单个asicc码加密而成。
-+ 加密后的规律: 
-    a. 每四个字母代表了一个符号, 字母或者数字
-    b. XD 是共有的
-    c. 加密后组成有大、小写字母和数字
-+ 什么东西可以加密成大、小写字母和数字? 或者说大, 小写字母和数字可以代表什么?
++ Zj = 108, Zk = 109, Zm = 111 or Zj = 154, Zk = 155, Zm = 157
 + 
-
