--- a/decryption.org
+++ b/decryption.org
@@ -57,7 +57,25 @@ XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 
 + Zj = 108, Zk = 109, Zm = 111 or Zj = 154, Zk = 155, Zm = 157?
 + so 
-  - Y1 = ?
+  - Y1 = ? because Y5 = 105, Y3 = 103 , so Y1 = 101 , and Y1 = e 
+| 加密后 | chr | Oct | Hx | Dec |
+| XDY1   | e   | 145 | 65 | 101 |
+| XDc2   |     |     |    |     |
+| XDY5   | i   | 151 | 69 | 105 |
+| XDZj   | l   | 154 | 6C | 108 |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 157 | 6F | 111 |
+| XDcz   |     |     |    |     |
+| XDQw   | @   | 100 | 40 |  64 |
+| XDY3   | g   | 147 | 67 | 103 |
+| XDZk   | m   | 155 | 6D | 109 |
+| XDYx   | a   | 141 | 61 |  97 |
+| XDY5   | i   | 151 | 69 | 105 |
+| XDZj   | l   | 154 | 6C | 108 |
+| XDJl   | .   | 056 | 2E |  46 |
+| XDYz   | c   | 143 | 63 |  99 |
+| XDZm   | o   | 157 | 6F | 111 |
+| XDZk   | m   | 155 | 6D | 109 |
   - c2 = ?
   - cz = ? 
 + 
