--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,8 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
-*** mysql =show processlist;=
+*** point 
++ mysql =show processlist;=
++ emacs commentary by =M-;=
 *** 升级 pip 
  + =pip install -U pip=
 *** 阿里事件对我的冲击
