--- a/readme.org
+++ b/readme.org
@@ -807,7 +807,7 @@ mysql 声明变量及赋值
 
 *** 2015-12-13
 --------------------------------------------------------------------------
-今天想孙晨请教个问题，才发现自己平时阐述问题都是不清楚的。自己都讲不清楚这个问题，还怎么指望请教别人？怎么加强自己的表达能力？
+今天像孙晨请教个问题，才发现自己平时阐述问题都是不清楚的。自己都讲不清楚这个问题，还怎么指望请教别人？怎么加强自己的表达能力？
 
 *** 2015-12-12
 --------------------------------------------------------------------------
