--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
+*** 迷失
++ 过多的选择，开始迷失。当下，应该专注下来。
 *** 异常
 + 瞎折腾，又手贱，去升级内核。结果 google-chrome 启动不了了。又没有错误日志。怎么排错？卸载重装，还是启不来。虚拟机也挂了。只能跑到烂柯去下棋了。将代理开启到 Firefox 里面，莫名其妙的，居然看 youtube 一点不卡。乐死宝宝了。冬天快到了，又可以看动物世界了。可惜，Firefox 下面截图不能直接在浏览器里面粘贴。
 + 不急于立竿见影，一步一个脚印儿, 给我迈扎实就踏实了。
