--- a/php/readme.org
+++ b/php/readme.org
@@ -21,3 +21,4 @@
 ***** 一个Hello World流程 
 --------------------------------------------------------------
 + 当用户代码(=<?php echo 'Hello World!';?>=)输入给PHP内核去执行的时候， PHP内核会对PHP代码进行 *词法分析* 和 *语法分析* ， 词法分析是把PHP代码分割成一个个的“单元”（ *TOKEN* ）， 语法分析则将这些“单元”转化为Zend Engine可执行的操作。 然后PHP内部的Zend Engine对这些操作进行 *顺次的执行* 。 Zend Engine是PHP内核的核心部分，负责最终操作的执行和结果的返回，(吼出"=Hello World=") 可以理解成为PHP内核中的“发动机”。
++ [[../photos/php-internal.png]]
