--- a/php/readme.org
+++ b/php/readme.org
@@ -1,6 +1,6 @@
 *** php源码漂流记
 ***** 动手前
-+ 使用一个东西，不对它有比较深刻的了解，用的不安心。这个说不定和公司用人一样，对应聘者的履历、背景和人品都会做一番功课。所以就有了这一段笔记。
++ 使用一个东西，不对它有比较深刻的了解，用的不安心。这个说不定和公司用人一样，对应聘者的履历、背景和人品都会做一番功课。所以就有了这一段阅读Tipi和源码的笔记。
 ***** 源码目录架构
 --------------------------------------------------------------
 + */* ：根目录里面有多个文件。有说明的，有启动测试的，logo等等
