--- a/php/readme.org
+++ b/php/readme.org
@@ -18,6 +18,8 @@
 + 在C语言的宏中，"##"被称为 连接符（concatenator），它是一种预处理运算符， 用来把两个语言符号(Token)组合成单个语言符号。
 + "#"是一种预处理运算符，它的功能是将其后面的宏参数进行字符串化操作 ， 简单说就是在对它所引用的宏变量通过替换后在其左右各加上一个双引号， 官方的说是将语言符号(Token)转化为字符串。
 + #line预处理用于改变当前的行号（__LINE__）和文件名（__FILE__）。
++ 读一遍《C程序设计》还是起了一些效果的，算法和数据结构的那些例子基本上跟着敲的时候，已经都知道是干什么的了。\
+而且php内核也慢慢可以循序看下去。python的内核也是 c ，后面如果有时间看的话，也是可以研究的了。
 ***** 一个Hello World流程 
 --------------------------------------------------------------
 + 当用户代码(=<?php echo 'Hello World!';?>=)输入给PHP内核去执行的时候， PHP内核会对PHP代码进行 *词法分析* 和 *语法分析* ， 词法分析是把PHP代码分割成一个个的“单元”（ *TOKEN* ）， 语法分析则将这些“单元”转化为Zend Engine可执行的操作。 然后PHP内部的Zend Engine对这些操作进行 *顺次的执行* 。 Zend Engine是PHP内核的核心部分，负责最终操作的执行和结果的返回，(吼出"=Hello World=") 可以理解成为PHP内核中的“发动机”。
