--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
+*** 电视剧
++ 生活就是电视剧。而且是比电视剧还戏剧。
 *** 书是好东西
 *** [[https://www.youtube.com/watch?v=2Q0MhOR59u8 ][Learn Emacs in 21 days]] 
 *** 迷失
