--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
 *** 小森林
-+ 大地微弱生灵,刚毅朝向天际。
++ 大地微弱生灵,刚毅朝向天际。一棵植物上要长得茂盛，还是不能有太多的芽。还是回到起点的圆圈了吗？
 *** 电视剧
 + 生活就是电视剧。而且是比电视剧还戏剧。
 *** 书是好东西
