--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
+*** 丢失
+    + 重装系统之后，才发现最大的损失不是花时间重新布置开发环境，而是丢失了几万字的工作笔记。
 *** 习惯
 + 从一个小习惯开始
 *** 小森林
