--- a/readme.org
+++ b/readme.org
@@ -2,6 +2,7 @@
 * Emacs
 ***  version 
 + 安装不同版本的 phalcon　还是用 github 资源好, 想切换哪个版本就切哪个编译, 其它工具类似。
++ virtualbox　挂了有些日子了，今天使用 VMwame 安装下 win10, 毕竟弈城上的对手对一点。烂柯比赛还是挺有趣的。带有竞赛性质的活动，动力大些。暂时 B 组不败。
 *** ubuntu 装 smartgit 
     + sudo apt-get update
     + sudo apt-get install gdebi
