--- a/readme.org
+++ b/readme.org
@@ -1,8 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 * Emacs
-*** 输多了，赢多了，剩下的就是计算力了。或许技术最后都成了经验？
-*** 比赛　
-+ 烂柯平台围棋比赛，拿了个小组第一。开心ing。奖金虽然只有150。
+*** 爬虫
++ 开始使用phpspider爬取数据
 ***  version 
 + 安装不同版本的 phalcon　还是用 github 资源好, 想切换哪个版本就切哪个编译, 其它工具类似。
 + Virtualbox 挂了有些日子了，今天使用 VMwame 安装下 Win10, 毕竟弈城上的对手多一点。烂柯比赛还是挺有趣的。带有竞赛性质的活动，动力大些。暂时 B 组不败。
