--- a/readme.org
+++ b/readme.org
@@ -2,6 +2,7 @@
 * Emacs
 *** 爬虫
 + 开始使用phpspider爬取数据
++ So many data to do great things!
 ***  version 
 + 安装不同版本的 phalcon　还是用 github 资源好, 想切换哪个版本就切哪个编译, 其它工具类似。
 + Virtualbox 挂了有些日子了，今天使用 VMwame 安装下 Win10, 毕竟弈城上的对手多一点。烂柯比赛还是挺有趣的。带有竞赛性质的活动，动力大些。暂时 B 组不败。
