--- a/readme.org
+++ b/readme.org
@@ -1,14 +1,13 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
-* 不经意之间
+*** 不经意之间
 + 有些悬而未解的难题，不妨放一放。某个不经意间，轻而易举就解决了。
-* Emacs
 *** 爬虫
 + 开始使用phpspider爬取数据
 + Large amounts of data can do a lot of things.
 + 海量的数据背后，究竟隐藏着什么东西？我很期待能有所发现。 怎么挖掘？从哪里入手？到哪里去？怎么使用这些数据产生价值？怎是还没有定论。先爬到一些数据再说。
 + 发现爬的太慢了，有必要改进一下方案。容老夫这两天好好思考一番。多进程是一个目前暂时想到的第一方案。
 + 爬虫好玩。虽然数据还不全，刚刚开始。
-+ 索引的效果是显著的: 未添加索引前，爬取之后需要查询，一天只能爬几十只股票全量历史数据；添加索引之后，一小时都可以爬几百只。爬取马上上升了级别。
++ 索引的效果是显著的: 未添加索引前，爬取之后需要查询，一天只能爬几十只股票全量历史数据；添加索引之后，一小时都可以爬几百只。爬取速度蹭蹭蹭上升了几个级别。
 ***  version 
 + 安装不同版本的 phalcon　还是用 github 资源好, 想切换哪个版本就切哪个编译, 其它工具类似。
 + Virtualbox 挂了有些日子了，今天使用 VMwame 安装下 Win10, 毕竟弈城上的对手多一点。烂柯比赛还是挺有趣的。带有竞赛性质的活动，动力大些。暂时 B 组不败。
