--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
 *** 不经意之间
-+ 有些悬而未解的难题，不妨放一放。某个不经意间，轻而易举就解决了。
++ 有些悬而未解的难题，不妨放一放。某个不经意间，轻而易举就解决了。emacs 里面也可以翻墙了。利用终端的shadowsocks + eww, nice!
 *** 爬虫
 + 开始使用phpspider爬取数据
 + Large amounts of data can do a lot of things.
