--- a/docs/decryption.org
+++ b/docs/decryption.org
@@ -127,4 +127,4 @@ XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk
 | XDZk   | m   | 155 | 6D | 109 |
 
 + XDY1XDc2XDY5XDZjXDYzXDZmXDczXDQwXDY3XDZkXDYxXDY5XDZjXDJlXDYzXDZmXDZk=evilcos@gmail.com  
-*** [[./php/Captcha/decryption.php][php solution]]
+*** [[../php/Captcha/decryption.php][php solution]]
