--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
+***  有梦
++ "有梦不怕也漫长"
 *** 连击
 + 从今天开始，看能连击多少天。“国虽大，好战必亡。天下虽安，忘战必危。” 其实放到个人身上也一样。说到底还是需要先实现财务自由。
 *** Youtube 视频下载
