* 马太效应缺陷

--- a/docs/keynesian-theory.org
+++ b/docs/keynesian-theory.org
@@ -10,14 +10,15 @@
 ***** 资本的边际效率是使得预期收益现值之和等于资本品价格的贴现率，它反映了厂商增加投资的预期利润率。资本的边际效率递减意味着厂商增加投资时预期利润率递减。凯恩斯认为，投资需求取决于资本边际效率与利率的对比关系。对应于既定的利息率，只有当资本边际效率高于这一利息率时才会有投资。但是，在凯恩斯看来，由于资本边际效率在长期中是递减的，除非利息率可以足够低，否则会导致经济社会中投资需求不足。
 ** 3、流动偏好规律 
 ***** 流动偏好（又称“流动性偏好”或“灵活偏好”），是指由于货币具有使用上的灵活性，人们宁肯以牺牲利息收入而储存不生息的货币来保持财富的心里倾向
-** 国家干预 
+** 结论： 
 ***** 市场中不存在一个能把私人利益转化为社会利益的看不见的手，经济危机和失业不可能消除，只有依靠看得见的手即政府对经济的全面干预，才能摆脱经济萧条和失业问题
 ** 经济效应
 *** 内卷化效应
 ***** 内卷化效应就是长期从事一项相同的工作，并且保持在一定的层面，没有任何变化和改观。这种行为通常是一种自我懈怠，自我消耗。
 ***** 无论是社会组织还是个人，进入内卷化状态，根本原因就在于精神状态和思想观念。人们常说，信心决定命运，观念决定出路。一个人如果总是自怨自艾，不思改变，不求进取，不谋开拓，民无信心，军无斗志，只能是原地不动，还有可能倒退。总是因陋就简，循规蹈矩，按部就班，只能进入周而复始的轮回状态。两千年的小农意识，生产的只能是两千年的自然经济，不可能产生出市场经济和现代经济。
 *** 马太效应
-***** 强者愈强、弱者愈弱
+***** 强者愈强、弱者愈弱。
+***** 缺陷： 只看到事物发展的短期趋势，只反映了数量方面的变化，忽视了性质的变化，不能用于分析事物发展的长期趋势；事实上，在客观世界，任何事物都遵循发生-发展-成熟-衰老-灭亡的规律，没有什么是永远不变的。
 ** 墓志铭
 ***** 不用为我悲哀，朋友，千万不要为我哭泣。
 ***** 因为，往后我将永远不必再辛劳。
