--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,11 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
+*** 释放
++ 空间总是有限的, 无论是内存还是心灵。和数组占用内存一样。大压力过后，一定需要找个方式释放掉。
+*** 分页理念
++ 其实迄今为止，感受最深的、影响最大的就是分页的思想。分页，就是将一个不能或者不方便一次性实现的目标, 切割成一个个细小的可以轻易达成的重复步骤。不管是瓦解对手，还是赚钱，或者番茄工作法的时间利用。无处不透着分页的思想。
 *** 陶笛
 + 去张家界的时候，买了个陶笛。我想尝试一下学个新鲜的东西。
++ 从今天起，开源节流。十年磨一剑。早日实现财务自由。
 *** 还是稍微小结一下
 + 走玻璃桥的感觉是: 心里怕, 它就脆，你不怕，它就踏实。 
 ***  有梦
