--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
-*** 陶笛
-+ 去张家界的时候，买了个陶笛。我想尝试一下学个新鲜的东西。
+*** 分页
++ 分化目标。将目标分解成一个个可以轻松达到的小目标。
 *** 还是稍微小结一下
 + 走玻璃桥的感觉是: 心里怕, 它就脆，你不怕，它就踏实。 
 ***  有梦
