--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE 
+*** 压力
++ 遇上很大的压力的时候，过了之后，一定要把这个压力卸掉。就像内存的释放一样。
 *** 分页
 + 分化目标。将目标分解成一个个可以轻松达到的小目标。
 *** 还是稍微小结一下
