* smartgit  30 天限制解除

--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,7 @@
-#+TODO: TODO IN_PROGRESS WAITING DONE 
+#+TODO: TODO IN_PROGRESS WAITING DONE
+*** 疯魔 
++ 真是疯魔的一周
++ [[http://stackoverflow.com/questions/10972289/how-to-change-smartgits-licensing-option-after-30-days-of-commercial-use-on-ubu][smartgit 30天限制解除]]    
 *** 释放
 + 空间总是有限的, 无论是内存还是心灵。和数组占用内存一样。大压力过后，一定需要找个方式释放掉。
 *** 分页理念
