--- a/docs/book.org
+++ b/docs/book.org
@@ -9,7 +9,7 @@
 ***** DONE 1. 提早六小时下班的高效工作术 (2015-10-19)
 ***** DONE 2. 效率是整理出来的(2015-10-20)
 ***** DONE 3. 秦时明月五万里长城(2015-10-21)
-***** DONE 4. 零压力工作法(2015-10-21)
+***** DONE 4. 零压力工作法(2015-10-2
 ***** DONE 5. 内心强大的力量(读尼采哲理2015-10-22)
 	内心强大很重要. 
 ***** DONE 6. 秦时明月六焚书坑儒(2015-10-23)
@@ -159,3 +159,6 @@
         + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
 
 ***** 22. 官子大全 
+***** IN_PROGRESS [#A] 23. 乌合之众(推荐)
+***** TODO 24. 哲学家都做了些什么
+***** TODO [#A] 25. 失控 (这本强烈推荐)
