* 三体 & emacs skill

--- a/docs/book.org
+++ b/docs/book.org
@@ -158,7 +158,8 @@
         + *中* 是取得阴阳平衡的一点，是最佳的意思。
         + 过多以物质为中心，是会失去内省的。人的内心的 *平衡* 是不可或缺的。
 
-***** 22. 官子大全 
+***** IN_PROGRESS 22. 官子大全 
 ***** IN_PROGRESS [#A] 23. 乌合之众(推荐)
-***** TODO 24. 哲学家都做了些什么
-***** TODO [#A] 25. 失控 (这本强烈推荐)
+***** IN_PROGRESS [#B] 24. 哲学家都做了些什么
+***** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
+***** IN_PROGRESS [#B] 26. <三体>三部曲
