--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *** 
+要想成长，需要一个变化多端的环境。
+*** 
 真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
 *** .
 *** git 额外命令工具套餐 git-extras
