* 四两拨千斤

--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *** 
+看动物世界很震撼的一个镜头是，一直很大的老鼠被一直很小的黄鼠狼滚咬几分钟，老鼠卒。古书说"蛇打七寸", 一点没错。捉住了脖子的重点，一个四两拨千斤的效果!
+*** 
 要想成长，需要一个变化多端的环境。
 *** 
 真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
