* 更好的php调试

--- a/notes.org
+++ b/notes.org
@@ -1,5 +1,15 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 * 
+*** 等待, 寻找
+    + 不要着急!不要着急!不要着急!重要事情多说三遍。"稳住阵脚，冷静观察，沉着应对", 莲花山上那个雕像人说的还是对的。
+    + 记录一下别人是怎么调试php的,
+    - 先找到进程信息
+     [[./photos/shutter-ps.png]]
+    - 然后使用 gdb 去调试指定的进程
+     [[./photos/shutter-gdb.png]]
+    - 通过strace命令查看进程具体做了啥事，根据里面的执行内容，分析和定位问题。
+     [[./photos/shutter-strace.png]]
+*** 
 + 看动物世界很震撼的一个镜头是，一直很大的老鼠被一直很小的黄鼠狼滚咬几分钟，老鼠卒。古书说"蛇打七寸", 一点没错。捉住了脖子的重点，一个四两拨千斤的效果!别看有些目标看着挺远，捉住命脉，都是有可能的。
 + 联系下 linux 下的 shutter 截取和编辑 
 + [[./photos/shutter-exp.png]]
