--- a/notes.org
+++ b/notes.org
@@ -10,8 +10,8 @@
     - 通过strace命令查看进程具体做了啥事，根据里面的执行内容，分析和定位问题。
      [[./photos/shutter-strace.png]]
 *** 
-+ 看动物世界很震撼的一个镜头是，一直很大的老鼠被一直很小的黄鼠狼滚咬几分钟，老鼠卒。古书说"蛇打七寸", 一点没错。捉住了脖子的重点，一个四两拨千斤的效果!别看有些目标看着挺远，捉住命脉，都是有可能的。
-+ 联系下 linux 下的 shutter 截取和编辑 
++ 看动物世界很震撼的一个镜头是，一只很大的老鼠被一只很小的黄鼠狼滚咬几分钟，老鼠卒。古书说"蛇打七寸", 一点没错。捉住了脖子的重点，一个四两拨千斤的效果!别看有些目标看着挺远，捉住命脉，都是有可能的。
++ 练习下 linux 中的 shutter 截取和编辑 
 + [[./photos/shutter-exp.png]]
 *** 
 要想成长，需要一个变化多端的环境。
