--- a/readme.org
+++ b/readme.org
@@ -1,12 +1,10 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *** 远去的人。
-*逝者如斯，无人可抵时间的销蚀*
+逝者如斯，无人可抵时间的销蚀
 前几天廿二公走了，今天下午四点，五婆也走了。岁月催人，从来不客气。村里祖辈一个个开始凋零了。人生短短几十年, 眨眼之间。没有时间去感叹，捉紧时间实现自己的小目标吧。再不加速，真的来不及了。那么，连并廿二公一起说一声: 曾经给以我难忘童年的长辈们，好走。愿你们带给我的棋艺和欢乐，传承给后代。
-*** 
-要想成长，需要一个变化多端的环境。
-*** 
-真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
-*** .
+
+***  成长的条件
+要想成长，需要一个变化多端的环境。 真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
 *** git 额外命令工具套餐 git-extras
 + [[https://github.com/tj/git-extras/blob/master/Installation.md][install]] 方法
 + 回首 学习 emacs 到现在作为自己的主要开发编辑器历程， 感觉还是挺爽的! 就像当初刚开始接触 vim 一样。从陌生到熟悉，到离不开它。
