--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+*** 几十载
+人生不过几十载，再不做自己喜欢的事，就过去了。再不看想看的世界，就没了。
 *** 远去的人。
 逝者如斯，无人可抵时间的销蚀
 前几天廿二公走了，今天下午四点，五婆也走了。岁月催人，从来不客气。村里祖辈一个个开始凋零了。人生短短几十年, 眨眼之间。没有时间去感叹，捉紧时间实现自己的小目标吧。再不加速，真的来不及了。那么，连并廿二公一起说一声: 曾经给以我难忘童年的长辈们，好走。愿你们带给我的棋艺和欢乐，传承给后代。
