* 读懂音乐入门

--- a/docs/book.org
+++ b/docs/book.org
@@ -165,3 +165,4 @@
 + 有些事必须先做，而且要按正确的次序去做。
 + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 ***** IN_PROGRESS [#B] 26. <三体>三部曲
+***** 27. 《如何读懂音乐》
