--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+*** 旋律
+四年前，每当这个时间，晚上 11 点半，几乎都会有熄灯睡觉的习惯。但是现在没有了。唯有夜深人静，聆听着收音机里面的旋律。
 *** 几十载
 人生不过几十载，再不做自己喜欢的事，就过去了。再不看想看的世界，就没了。
 *** 远去的人。
