--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,6 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
+*** 杀气
+虽然刚开始捣鼓kali渗透没多久，但是 我的 gmail居然已经找不回来了。绑定的手机号接收不到找回密码的短信，另一个邮箱尽管收到了验证的短信，但是好像被人篡改了。已经验证不了了。这个邮箱有很多关联的，无法通过验证了。好浓的杀气！后脑勺有一丝丝的凉！
 *** 旋律
 四年前，每当这个时间，晚上 11 点半，几乎都会有熄灯睡觉的习惯。但是现在没有了。唯有夜深人静，聆听着收音机里面的旋律。
 *** 几十载
