--- a/readme.org
+++ b/readme.org
@@ -1,23 +1,22 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *** 杀气
-虽然刚开始捣鼓kali渗透没多久，但是 我的 gmail居然已经找不回来了。绑定的手机号接收不到找回密码的短信，另一个邮箱尽管收到了验证的短信，但是好像被人篡改了。已经验证不了了。这个邮箱有很多关联的，无法通过验证了。好浓的杀气！后脑勺有一丝丝的凉！
++ 虽然刚开始捣鼓kali渗透没多久，但是 我的 gmail居然已经找不回来了。绑定的手机号接收不到找回密码的短信，另一个邮箱尽管收到了验证的短信，但是好像被人篡改了。已经验证不了了。这个邮箱有很多关联的，无法通过验证了。好浓的杀气！后脑勺有一丝丝的凉！
 *** 工具
-哪有那么多时间去捣鼓工具，与其继续捣鼓工具，不如深入去学内核相关的东西。
++ 哪有那么多时间去捣鼓工具，与其继续捣鼓工具，不如深入去学内核相关的东西。
 *** 重新弄下 vim 
 + 弄个开发插件比较齐全的[[https://github.com/spf13/spf13-vim][spf13-vim]]
 - 执行 =sh <(curl https://j.mp/spf13-vim3 -L)=, 一键安装了。不少好东东
 - 中间有说到需要安装支持 lua, 先在打开的 vim内 判断一下 =:echo has('lua')=, 结果是0。好吧。重新编译 vim8.0, 找到 下载的vim目录, ./configure --enable-luainterp=yes, make && make install, 再查看，变成 1 了, OK。
 
 *** 旋律
-四年前，每当这个时间，晚上 11 点半，几乎都会有熄灯睡觉的习惯。但是现在没有了。唯有夜深人静，聆听着收音机里面的旋律。
++ 四年前，每当这个时间，晚上 11 点半，几乎都会有熄灯睡觉的习惯。但是现在没有了。唯有夜深人静，聆听着收音机里面的旋律。
 *** 几十载
-人生不过几十载，再不做自己喜欢的事，就过去了。再不看想看的世界，就没了。
++ 人生不过几十载，再不做自己喜欢的事，就过去了。再不看想看的世界，就没了。
 *** 远去的人。
-逝者如斯，无人可抵时间的销蚀
-前几天廿二公走了，今天下午四点，五婆也走了。岁月催人，从来不客气。村里祖辈一个个开始凋零了。人生短短几十年, 眨眼之间。没有时间去感叹，捉紧时间实现自己的小目标吧。再不加速，真的来不及了。那么，连并廿二公一起说一声: 曾经给以我难忘童年的长辈们，好走。愿你们带给我的棋艺和欢乐，传承给后代。
++ 逝者如斯，无人可抵时间的销蚀, 前几天廿二公走了，今天下午四点，五婆也走了。岁月催人，从来不客气。村里祖辈一个个开始凋零了。人生短短几十年, 眨眼之间。没有时间去感叹，捉紧时间实现自己的小目标吧。再不加速，真的来不及了。那么，连并廿二公一起说一声: 曾经给以我难忘童年的长辈们，好走。愿你们带给我的棋艺和欢乐，传承给后代。
 
 ***  成长的条件
-要想成长，需要一个变化多端的环境。 真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
++ 要想成长，需要一个变化多端的环境。 真没想到，这么多天没动代码了。立春过后，重新调整晚睡早起的习惯了。
 *** git 额外命令工具套餐 git-extras
 + [[https://github.com/tj/git-extras/blob/master/Installation.md][install]] 方法
 + 回首 学习 emacs 到现在作为自己的主要开发编辑器历程， 感觉还是挺爽的! 就像当初刚开始接触 vim 一样。从陌生到熟悉，到离不开它。
