--- a/docs/book.org
+++ b/docs/book.org
@@ -1,4 +1,4 @@
-#+TODO: TODO IN_PROGRESS WAITING DONE * emacs大法好 ** 一年之内，学成emacs这套刀法。
+#+TODO: TODO IN_PROGRESS WAITING DONE 
 ** 2016 Books Lists
 ***** profession books lists
 | name                 | brief | core ideas | time        | book review                   |
@@ -25,20 +25,21 @@
 	不管路走了多远,错了就要重新返回. -- 土耳其谚语
 ***** DONE 12. 《黑客与画家》(2016-01-16)
 	-- 对Lisp语言，以及编程语言有着非常独到的见解,是一本像孙子兵法那样的书籍
-***** DONE [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
+***** IN_PROGRESS [#B] 13.  开始看Pratical Common Lisp (all English, a big challenge)
 ***** DONE 14. 《尼采内心的八度定律》 
-      1) 一切从了解自己开始， 找到自己的价值；
-      2) 爱自己， 新鲜，充实自己；
-      3) 坚持自己的梦想
-      4) 承认自己的局限，不断进步；
-      5) 历练磨难，凝聚力量；
-      6) 坦然面对迷惑，坚持自己的判断；
-      7) 每天克制自己的一件小事，自制； 8) 每天进步一点点。 
+      +1) 一切从了解自己开始， 找到自己的价值；
+      +2) 爱自己， 新鲜，充实自己；
+      +3) 坚持自己的梦想
+      +4) 承认自己的局限，不断进步；
+      +5) 历练磨难，凝聚力量；
+      +6) 坦然面对迷惑，坚持自己的判断；
+      +7) 每天克制自己的一件小事，自制； 
+      +8) 每天进步一点点。 
 ***** DONE 15. 《坂田攻击法》　剃刀手，电子计算机。攻击前，一定要选准要害。  
 ***** DONE [#A] 16.《Web 安全深度剖析》 安全漏洞，攻防测试。 
     CLOSED: [2016-06-16 Thu 15:54]
 ***** IN_PROGRESS [#A] 17. C程序设计（第4版）
-***** IN_PROGRESS [#A] 18. python绝技:运用python成为顶级黑客
+***** DONE [#A] 18. python绝技:运用python成为顶级黑客
 ***** IN_PROGRESS [#B] 19. 玄玄棋经
 ***** 20. 遥远的救世主 
         + 文化属性
@@ -164,5 +165,5 @@
 ***** IN_PROGRESS [#A] 25. 失控 (这本强烈推荐)
 + 有些事必须先做，而且要按正确的次序去做。
 + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
-***** IN_PROGRESS [#B] 26. <三体>三部曲
-***** 27. 《如何读懂音乐》
+***** DONE [#B] 26. <三体>三部曲
+***** IN_PROGRESS 27. 《如何读懂音乐》
