--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
 *** 就绪
 + 万事具备，只欠东风！一点一点突破。
++ 看了一集《越野千里》贝尔带奥巴马的节目。国外的总统都能去做这样一个节目，很神奇。有生之年, 啥时候我们国家的也有这个？不说他们的高层特勤，白宫人员等等。。。。。。
 *** 杀气
 + 虽然刚开始捣鼓kali渗透没多久，但是 我的 gmail居然已经找不回来了。绑定的手机号接收不到找回密码的短信，另一个邮箱尽管收到了验证的短信，但是好像被人篡改了。已经验证不了了。这个邮箱有很多关联的，无法通过验证了。好浓的杀气！后脑勺有一丝丝的凉！
 *** 工具
