--- a/docs/book.org
+++ b/docs/book.org
@@ -167,5 +167,5 @@
 + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 ***** DONE [#B] 26. <三体>三部曲
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-***** TODO 《程序员修炼之道－－从小工到专家》(2017-02-26)
-***** TODO 《图解茶经》(2017-02-26)
+***** TODO 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+***** TODO 29.《图解茶经》(2017-02-26)
