--- a/docs/book.org
+++ b/docs/book.org
@@ -168,4 +168,5 @@
 ***** DONE [#B] 26. <三体>三部曲
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
 ***** TODO 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
++ 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
 ***** TODO 29.《图解茶经》(2017-02-26)
