* 漂亮的完成工作

--- a/docs/book.org
+++ b/docs/book.org
@@ -169,4 +169,7 @@
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
 ***** TODO 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
 + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
++ 编程是一种技艺，一种需要用心学习的技艺。
++ 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
++ 注重实效的程序员不仅要完成工作，而且要完成得漂亮。
 ***** TODO 29.《图解茶经》(2017-02-26)
