--- a/docs/book.org
+++ b/docs/book.org
@@ -167,9 +167,16 @@
 + 复杂的机器必定是逐步地，而且往往是间接地完善的。别指望通过一次华丽的组装就能完成整个工作正常的机械系统。你必须首先制作一个可运行的系统，再以此为平台研制你真正想完成的系统。
 ***** DONE [#B] 26. <三体>三部曲
 ***** IN_PROGRESS 27. 《如何读懂音乐》(2017-02-22)
-***** TODO 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
+***** IN_PROGRESS 28.《程序员修炼之道－－从小工到专家》(2017-02-26)
 + 能不能让正确的原则指导正确的行动本身，其实就是区分是否高手的一个显著标志。
 + 编程是一种技艺，一种需要用心学习的技艺。
 + 不应该局限于任何限定的技术，而是应该拥有足够广博的背景和经验基础，以让你能在特定情况下选择好的解决方案。你的背景源自于对计算机科学的基本原理的理解，而你的经验来自广泛的实际项目。
 + 注重实效的程序员不仅要完成工作，而且要完成得漂亮。
++ 软件构造应该是工程学科。但是，并不排斥个人的技艺。
++ 我们, 采集的只是石头，却必须时刻展望未来的大教堂。--采石工人的信条
++ 不间断的思考，实时地批判你的工作。
++ 在一个项目的总体结构中，总有个性和技艺的位置。
++ tips: 
+  - Care About Your Craft.(关注你的技艺。)
+  - Think!About Your Work.(思考！你的工作。)
 ***** TODO 29.《图解茶经》(2017-02-26)
