--- a/docs/book.org
+++ b/docs/book.org
@@ -176,7 +176,17 @@
 + 我们, 采集的只是石头，却必须时刻展望未来的大教堂。--采石工人的信条
 + 不间断的思考，实时地批判你的工作。
 + 在一个项目的总体结构中，总有个性和技艺的位置。
++ 注重实效的哲学
++ 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是设法注意更大的图景。
++ 对自己做的每件事情负责。
++ 在所有弱电中，最大的弱点就是害怕暴露弱点。
++ 一扇破窗户，只要有那么一段时间不修理，就会渐渐给建筑的居民带来一种废弃感。
++ 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
 + tips: 
   - Care About Your Craft.(关注你的技艺。)
   - Think!About Your Work.(思考！你的工作。)
+  - Provide Options, Don't Make Lame Excuses.(提供各种选择，不要找蹩脚的借口。)
+  - Don't Live with Broken Windows.(不要容忍破窗户)
+  - Be a Catalyst for Change. (做变化的催化剂)
+  - Remember the Big Picture.(记住大的图景)
 ***** TODO 29.《图解茶经》(2017-02-26)
