--- a/docs/book.org
+++ b/docs/book.org
@@ -179,7 +179,7 @@
 + 注重实效的哲学
 + 越出直接的问题去思考，总是设法把问题放在更大的语境中，总是设法注意更大的图景。
 + 对自己做的每件事情负责。
-+ 在所有弱点中，最大的弱点就是害怕暴露弱点。
++ 在所有弱电中，最大的弱点就是害怕暴露弱点。
 + 一扇破窗户，只要有那么一段时间不修理，就会渐渐给建筑的居民带来一种废弃感。
 + 要持续不断地观察周围发生变化的事情，而不只是你自己在做的事情。
 + tips: 
