--- a/readme.org
+++ b/readme.org
@@ -1,5 +1,7 @@
 #+TODO: TODO IN_PROGRESS WAITING DONE
-
+*** 技术
++ 技术终究是要使用场景。没有使用场景，再高深、再牛逼的技术也是不值一谈。还浪费了时间、精力。
++ 搬家的一点趣事（教训）: 看房子，一定要综合考虑，特别是最主要的要点是需要安静，在这个基础上再去考量空间，价格等等因素。考虑一个地方安静与否，需要想象不同时间下，会有啥变化。多花些时间调研，总比后悔好。
 *** 英语
 + 这一年来，英语单词虽说是长进了一点，但是距离自由的阅读英文资料还是有一段距离。争取今年再上一个台阶。
 *** 更好玩的虚拟技术
@@ -67,10 +69,9 @@
 *** Youtube 视频下载
 + youtube 上面的视频清晰度相当高, 虽然他们开始限制下载了。但还是有 [[http://flvcode.com/][下载]] 的办法。
 + emacs 使用 =M x= 调起 =package-install= 安装 *php-extras-generate-eldoc* 之后，编辑 php 文件时，光标下的　php 函数都有函数参数提示
-+ emacs =jump-to-go=   jump to defined of a function, 非常好用
-
++ emacs =jump-to-go=   jump to defined of a function, 非常好用://github.com/daniel1988
 *** 游戏
-+ 这周玩了下以前玩过的一款游戏－－真三国无双。和罗宗说的一样： 一款游戏，偶尔玩下，就是你玩游戏; 沉迷进去的，就是被游戏玩了。游戏为什么吸引人呢？特别是竞技性的游戏。我觉得他们提供了一个让人挥洒精力和时间的交流平台。以配合技能的团队方式，能有效的组织起众人的战斗激情。升级的模式符合打斗场景的预设 以及大众游戏玩家的心理需求。　
++ 这周玩了下以前玩过的一款游戏－－真三国无双。和[[https://github.com/danie1988][罗宗]]说的一样： 一款游戏，偶尔玩下，就是你玩游戏; 沉迷进去的，就是被游戏玩了。游戏为什么吸引人呢？特别是竞技性的游戏。我觉得他们提供了一个让人挥洒精力和时间的交流平台。以配合技能的团队方式，能有效的组织起众人的战斗激情。升级的模式符合打斗场景的预设 以及大众游戏玩家的心理需求。　
 *** 不经意之间
 + 有些悬而未解的难题，不妨放一放。某个不经意间，轻而易举就解决了。emacs 里面也可以翻墙了。利用终端的shadowsocks + eww, nice! 好吧， 我手机也可以翻墙了。。。。。。
 + 我所遇到的问题，好像基本上google上面都有人遇到过。而且80%都有切实可行的实现方式。
@@ -1983,4 +1984,4 @@ symfony框架也是相当犀利！
 尽量让一台机器能够承载更多的用户请求
 
 [[./photos/black_bird.jpg]]
-:q
+
